<resources>
    <string name="app_name">Clock</string>
    <string name="add_alarm">Add alarm</string>
    <string name="no_alarms">No alarms yet</string>
    <string name="alarm">Alarm</string>
    <string name="snooze">Snooze</string>
    <string name="snoozed">Snoozed</string>
    <string name="next_alarm_label">Next alarm</string>
    <string name="rings_at">Rings at %1$s</string>
    <string name="snoozed_rings_at">Snoozed · rings %1$s</string>
    <string name="dismiss">Dismiss</string>
    <string name="hold_to_dismiss">Hold to dismiss</string>
    <string name="alarm_missed">Alarm missed</string>
    <string name="alarm_missed_text">%1$s rang with no response</string>
    <string name="alarm_menu">Alarm options</string>
    <string name="settings">Settings</string>
    <string name="preview">Preview</string>
    <string name="previewing">Playing a sample — tap Preview again to stop</string>
    <string name="alarm_enabled">Alarm on</string>
    <string name="saved_disabled">Saved. This alarm is off and will not ring.</string>
    <string name="delete">Delete</string>
    <string name="delete_alarm_title">Delete alarm?</string>
    <string name="delete_alarm_message">This alarm will be removed.</string>
    <string name="edit_alarm">Edit alarm</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="label">Name</string>
    <string name="repeat">Repeat</string>
    <string name="ringtone">Ringtone</string>
    <string name="default_ringtone">Default</string>
    <string name="vibration">Vibration</string>
    <string name="snooze_duration">Snooze duration</string>
    <string name="tap_to_change_time">Tap to change time</string>
    <string name="volume">Volume</string>
</resources>
